@@ -2,9 +2,12 @@
 # For details: https://github.com/PyCQA/pylint/blob/main/LICENSE
 
 import contextlib
-from typing import Dict, Optional, Type
+import warnings
+from typing import Dict, Generator, Optional, Type
 
+from pylint.constants import PY38_PLUS
 from pylint.testutils.global_test_linter import linter
+from pylint.testutils.output_line import MessageTest
 from pylint.testutils.unittest_linter import UnittestLinter
 from pylint.utils import ASTWalker
 
@@ -29,7 +32,7 @@ class CheckerTestCase:
             yield
 
     @contextlib.contextmanager
-    def assertAddsMessages(self, *messages):
+    def assertAddsMessages(self, *messages: MessageTest) -> Generator[None, None, None]:
         """Assert that exactly the given method adds the given messages.
 
         The list of messages must exactly match *all* the messages added by the
@@ -45,7 +48,33 @@ class CheckerTestCase:
             "Expected messages did not match actual.\n"
             f"\nExpected:\n{expected}\n\nGot:\n{got_str}\n"
         )
-        assert got == list(messages), msg
+
+        assert len(messages) == len(got), msg
+
+        for expected_msg, gotten_msg in zip(messages, got):
+            assert expected_msg.msg_id == gotten_msg.msg_id, msg
+            assert expected_msg.line == gotten_msg.line, msg
+            assert expected_msg.node == gotten_msg.node, msg
+            assert expected_msg.args == gotten_msg.args, msg
+            assert expected_msg.confidence == gotten_msg.confidence, msg
+            assert expected_msg.col_offset == gotten_msg.col_offset, msg
+            if PY38_PLUS:
+                # pylint: disable=fixme
+                # TODO: Require end_line and end_col_offset and remove the warning
+                if not expected_msg.end_line == gotten_msg.end_line:
+                    warnings.warn(
+                        f"The end_line attribute of {gotten_msg} does not match "
+                        f"the expected value in {expected_msg}. In pylint 3.0 correct end_line "
+                        "attributes will be required for MessageTest.",
+                        DeprecationWarning,
+                    )
+                if not expected_msg.end_col_offset == gotten_msg.end_col_offset:
+                    warnings.warn(
+                        f"The end_col_offset attribute of {gotten_msg} does not match "
+                        f"the expected value in {expected_msg}. In pylint 3.0 correct end_col_offset "
+                        "attributes will be required for MessageTest.",
+                        DeprecationWarning,
+                    )
 
     def walk(self, node):
         """recursive walk on the given node"""
